// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     User
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="first_name"
    >
      First Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="first_name"
        onChange={[MockFunction]}
        type="text"
        value="George"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="last_name"
    >
      Last Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="last_name"
        onChange={[MockFunction]}
        type="text"
        value="Bluth"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="email"
    >
      Email
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="email"
        onChange={[MockFunction]}
        type="text"
        value="george.bluth@reqres.in"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="avatar"
    >
      Avatar
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="avatar"
        onChange={[MockFunction]}
        type="text"
        value="https://s3.amazonaws.com/uifaces/faces/twitter/calebogden/128.jpg"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     User
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="first_name"
    >
      First Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="first_name"
        onChange={[MockFunction]}
        type="text"
        value="George"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="last_name"
    >
      Last Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="last_name"
        onChange={[MockFunction]}
        type="text"
        value="Bluth"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="email"
    >
      Email
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="email"
        onChange={[MockFunction]}
        type="text"
        value="george.bluth@reqres.in"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="avatar"
    >
      Avatar
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="avatar"
        onChange={[MockFunction]}
        type="text"
        value="https://s3.amazonaws.com/uifaces/faces/twitter/calebogden/128.jpg"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
